configure database and JPA settings in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=JavaSpringBootAuth
+
+# Configuração do banco de dados
+spring.datasource.url=jdbc:postgresql://localhost:5432/javaAuth
+spring.datasource.username=javaAuth
+spring.datasource.password=javaAuth
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Flyway
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
